# delta

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  copy_node_to_static.py  index.html  manage.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml
.github/: git-commit-instructions.md
delta/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.md  installation.md  kanban.md  users.md
docs/styles/: kanban-docs-colors.css
installation/: index.html
kanban/: admin.py  apps.py  forms.py  index.html  models.py  urls.py  views.py
kanban/migrations/: 0001_initial.py  0002_task_order.py  0003_alter_task_options_task_assigned_to.py
kanban/static/kanban/: colors.css
kanban/templates/kanban/: backlog.html  create_task.html  edit_task.html  home.html  kanban_board.html  sidebar.html  task_list.html
kanban/templatetags/: kanban_extras.py
mi/: urls.py
mi/static/mi/js/: builder.js  py_engine.js
mi/templates/mi/: builder.html
search/: search_index.json
styles/: kanban-docs-colors.css
templates/: base.html  internal_base.html
usage/: index.html
users/: index.html  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: create_organisation.html  create_team.html  signup.html
